# geolocation

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  temp.py  test_rotation.py
models/: classifier.py
src/: config.py  main2.py
src/geolocation/: config.py  main.py  main2.py
src/geolocation/utils/: datasets.py  feature_extraction.py  matching.py  metrics.py
src/utils/: datasets.py  feature_extraction.py  matching.py
utils/: feature_extraction.py  matching.py
